[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bpmailer"
version = "1.3"
authors = [
  { name="BeProud Inc.", email="project@beproud.jp" },
]
description = "Mailing utility for Django"
readme = "README.rst"
requires-python = ">=3.9"
keywords=["django", "mail"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.2",
  "Intended Audience :: Developers",
  "Environment :: Plugins",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["Django>=3.2", "six", "Celery"]

[project.urls]
Homepage = "https://github.com/beproud/bpmailer/"

[tool.setuptools.packages.find]
where = ["."]
